Autodiscover service provider. Tweak how we publish migrations

--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,12 @@
     },
     "config": {
         "sort-packages": true
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Dcodegroup\\StateMachines\\StateMachineServiceProvider"
+            ]
+        }
     }
 }
