Added dependencies in composer.json

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
     ],
     "homepage": "https://github.com/dcodegroup/state-machines",
     "require": {
-        "php": "^8.2"
+        "php": "^8.2",
+        "illuminate/console": "^10.0",
+        "illuminate/database": "^10.0",
+        "illuminate/support": "^10.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
